name:                edda
version:             0.1.0.0
synopsis:            Elite Dangerous Network Aggregator
description:         Please see README.md
homepage:            https://github.com/troydm/edda
license:             MIT
license-file:        LICENSE
author:              Dmitry "troydm" Geurkov
maintainer:          d.geurkov@gmail.com
copyright:           2016 Dmitry "troydm" Geurkov
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable edda
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       EDDA.Data.Database,
                       EDDA.Data.Document,
                       EDDA.Data.Import.EDDB.Stations,
                       EDDA.Data.Import.EDDB.Systems,
                       EDDA.Data.Import.EDDB.Util,
                       EDDA.Data.Query,
                       EDDA.Data.Static,
                       EDDA.Data.Subscriber,
                       EDDA.Schema.CommodityV2,
                       EDDA.Schema.OutfittingV1,
                       EDDA.Schema.Parser,
                       EDDA.Schema.ShipyardV1,
                       EDDA.Schema.Util,
                       EDDA.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       transformers,
                       mtl,
                       monad-loops,
                       text,
                       unix,
                       unordered-containers,
                       vector,
                       zlib,
                       zeromq4-haskell,
                       aeson,
                       cassava,
                       mongoDB,
                       bson,
                       attoparsec,
                       time,
                       iso8601-time,
                       http-types,
                       http-client,
                       http-client-tls,
                       ConfigFile,
                       cmdargs,
                       directory,
                       hslogger,
                       process,
                       temporary
