name:                edda
version:             0.1.0.0
synopsis:            Elite Dangerous Network Aggregator
description:         Please see README.md
homepage:            https://github.com/troydm/edda
license:             MIT
license-file:        LICENSE
author:              Dmitry "troydm" Geurkov
maintainer:          d.geurkov@gmail.com
copyright:           2016 Dmitry "troydm" Geurkov
category:            Game
build-type:          Simple
cabal-version:       >=1.10
data-files:          edda.conf,
                     test/EDDA/Schema/commodity1.json,
                     test/EDDA/Schema/commodity2.json,
                     test/EDDA/Schema/commodity3.json,
                     test/EDDA/Schema/outfitting1.json,
                     test/EDDA/Schema/outfitting2.json,
                     test/EDDA/Schema/outfitting3.json,
                     test/EDDA/Schema/outfitting4.json,
                     test/EDDA/Schema/shipyard1.json,
                     test/EDDA/Schema/shipyard2.json

library
  hs-source-dirs:      src
  exposed-modules:     EDDA.Data.Database,
                       EDDA.Data.Document,
                       EDDA.Data.Import.EDDB.Stations,
                       EDDA.Data.Import.EDDB.Systems,
                       EDDA.Data.Import.EDDB.Util,
                       EDDA.Data.Query,
                       EDDA.Data.Static,
                       EDDA.Data.Subscriber,
                       EDDA.Data.Cache,
                       EDDA.Data.Rest,
                       EDDA.Schema.CommodityV2,
                       EDDA.Schema.CommodityV3,
                       EDDA.Schema.OutfittingV1,
                       EDDA.Schema.OutfittingV2,
                       EDDA.Schema.Parser,
                       EDDA.Schema.ShipyardV1,
                       EDDA.Schema.ShipyardV2,
                       EDDA.Schema.Util,
                       EDDA.Types,
                       EDDA.Config
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       transformers,
                       mtl,
                       monad-loops,
                       text,
                       unix,
                       unordered-containers,
                       vector,
                       split,
                       zlib,
                       zeromq4-haskell,
                       scotty,
                       wai-extra,
                       aeson,
                       aeson-pretty,
                       cassava,
                       mongoDB,
                       bson,
                       attoparsec,
                       scientific,
                       time,
                       iso8601-time,
                       http-types,
                       http-client,
                       http-client-tls,
                       directory,
                       ConfigFile,
                       hslogger,
                       process,
                       temporary,
                       mmap

executable edda
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       edda,
                       bytestring,
                       text,
                       mtl,
                       transformers,
                       unix,
                       directory,
                       hslogger,
                       process,
                       cmdargs

test-suite edda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  other-modules:       EDDA.Test.Util,
                       EDDA.Schema.ParserTest,
                       EDDA.Schema.CommodityV2Test,
                       EDDA.Schema.CommodityV3Test,
                       EDDA.Schema.OutfittingV1Test,
                       EDDA.Schema.ShipyardV1Test,
                       EDDA.Schema.ShipyardV2Test
  build-depends:       base,
                       edda,
                       HUnit,
                       bytestring,
                       transformers,
                       time,
                       unordered-containers,
                       aeson,
                       hslogger,
                       test-framework,
                       test-framework-hunit


source-repository head
  type: git
  location: https://github.com/troydm/edda

